todolist-goof/k8s/goof-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-goof-ingress
spec:
    ingressClassName: nginx
    rules:
    - host:  java-goof.localhost
      http:
        paths:
          - pathType: ImplementationSpecific 
            backend:
              service:
                name: goof
                port:
                  number: 80
